# ticket_env

./: README (1).md  app.py  env.py  inference.py  pyproject.toml  requirements.txt
server/: app.py
